# streamlit-security-dashboards

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: tear-down-and-deploy-native-app.yml
deployment_models/local-docker/: app.nix
deployment_models/native-app/: snowflake.yml
deployment_models/native-app/app/: README.md
src/: Authentication.py  snowflake.yml  streamlit_app.py
src/common/: queries.py  tiles.py  utils.py
src/pages/: Configuration_Management.py  Least_Privileged_Access.py  Privileged_Access.py  identity_management.py
